1.8.1
-----
1. Fix corrupted menus when using a gradient that uses an alpha of less than
   100.

1.8.0
-----
1. Add option to not display keyboard shortcurt underline until 'Alt' is
   pressed.
2. Add options to specify appearance of toolbar buttons.
3. Allow to use popup menu shade factor when colouring as per menubar.
4. Colour listview arrows on mouse-over.
5. Allow to force alternate colours for combo-box pop-up menus - matches Gtk.
6. Fix background rings alignment on kwin borders.
7. If highlighting scrollviews, and allow mouse-over for entries, also allow
   mouse-over for scrollviews.
8. Allow rounded list-style combo popups.

1.7.2
-----
1. Allow editable combo-box popup to be rounded.
2. For windows build, set FramelessWindowHint when setting WA_TranslucentBackground
3. Always use flat background kwin, custom background messes up some aurorae
   decorations.
4. Update Chinese translations.
5. Set/clear widget masks when compositing toggled.
6. Fix kwin custom button icon colours.
7. Fix treeview line dimensions.

1.7.1
-----
 1. Remove kmix 'fix', and ue a proper fix! Dont access QWidgets' winId unless
    "w->testAttribute(Qt::WA_WState_Created) && w->internalWinId()" Thanks to
    Thomas Lübking
 2. Set XProperties on show event.
 3. Fix saving of 'thin' options.
 4. Only disable opacity for titlebar, if using kwin configured setting and blending
    menubars (or using menubar colour).
 5. Set KDE SC 4.6 'AbilityUsesBlurBehind' kwin setting if decoration or style supports
    opacity.
 6. Fix 'rasied and joined' toolbar buttons.
 7. Allow 'menus' of non-editable combos to be rounded.
 8. Turn config dialog's 'whats this' help messages into tooltips.
 9. Remove box around arrow in listview lines - to match Gtk better.
10. Remove 'new' listview lines setting - always use 'older' style.
11. Add warning about opacity settings and compiz.
12. Fix drawing of background images onto titlebar.

1.7.0
-----