@@ -39,7 +39,6 @@ class ShortcutHandler : public QObject
 
     bool hasSeenAlt(const QWidget *widget) const; 
     bool isAltDown() const { return itsAltDown; }
-    void setHandlePopupsOnly(bool h) { itsHandlePopupsOnly=h; }
     bool showShortcut(const QWidget *widget) const;
 
     private Q_SLOTS:
@@ -53,8 +52,7 @@ class ShortcutHandler : public QObject
 
     private:
 
-    bool            itsAltDown,
-                    itsHandlePopupsOnly;
+    bool            itsAltDown;
     QSet<QWidget *> itsSeenAlt,
                     itsUpdated;
 };
